--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     </div>
      <p id="quote">Feeling <a href="http://quotesforthought.com">gratitude</a> and not expressing it is like wrapping and not giving it.</p>
 
-     <button>Change name</button>
+     <div>
+        <button class="btn">INPUT NAME</button>
+     </div>
+     
      <script src="./myscript.js"></script>
 </body>
 </html>
